update code and test, introduced enum for type